2011-04-04  Paul Eggert  <eggert@cs.ucla.edu>

	* process.c (list_processes_1, create_pty, read_process_output):
	(exec_sentinel): Remove vars that were set but not used.
	(create_pty): Remove unnecessary "volatile"s.
	(Fnetwork_interface_info): Avoid possibility of int overflow.
	(read_process_output): Do adaptive read buffering even if carryover.
	(read_process_output): Simplify nbytes computation if buffered.

	* bytecode.c (exec_byte_code): Rename local to avoid shadowing.

	* syntax.c (scan_words): Remove var that was set but not used.
	(update_syntax_table): Use unsigned instead of int.

	* lread.c (lisp_file_lexically_bound_p): Use ints rather than endptrs.
	(lisp_file_lexically_bound_p, read1): Use unsigned instead of int.
	(safe_to_load_p): Make the end-of-loop test the inverse of the in-loop.

	* print.c (print_error_message): Avoid int overflow.

	* font.c (font_list_entities): Redo for clarity,
	so that reader need not know FONT_DPI_INDEX + 1 == FONT_SPACING_INDEX.

2011-04-03  Paul Eggert  <eggert@cs.ucla.edu>

	* font.c (font_find_for_lface, Ffont_get_glyphs): Remove unused vars.
	(font_score): Avoid potential overflow in diff calculation.

	* fns.c (substring_both): Remove var that is set but not used.
	(sxhash): Redo loop for clarity and to avoid wraparound warning.

	* eval.c (funcall_lambda): Rename local to avoid shadowing.

	* alloc.c (mark_object_loop_halt, mark_object): Use size_t, not int.
	Otherwise, GCC 4.6.0 optimizes the loop check away since the check
	can always succeed if overflow has undefined behavior.

	* search.c (boyer_moore, wordify): Remove vars set but not used.
	(wordify): Omit three unnecessary tests.

	* indent.c (MULTIBYTE_BYTES_WIDTH): Don't compute wide_column.
	All callers changed.  This avoids the need for an unused var.

	* casefiddle.c (casify_region): Remove var that is set but not used.

	* dired.c (file_name_completion): Remove var that is set but not used.
